bk_ida/gccida/g3/dead_or_set_regno_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dead_or_set_regno_p/src/rtlanal.c:2195:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int16 *)insn[2]; 
                 ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dead_or_set_regno_p/src/rtlanal.c:2246:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v19 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v18) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dead_or_set_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dead_or_set_regno_p/src/rtlanal.c:2294:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v29 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v26) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dead_or_set_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dead_or_set_regno_p/src/obj/rtlanal.o] Error 1
